@@ -130,6 +130,9 @@ if [ "$ENABLE_XMLTV2VDR" == "true" ] ; then
     cp $source /var/lib/epgsources
   done
 fi
+if [ "$ENABLE_ROBOTV" == "true" ] ; then
+  VDR_ARG="$VDR_ARG -P robotv"
+fi
 
 if [ ! -d "$ADDON_HOME/epgimages" ]; then
   mkdir -p "$ADDON_HOME/epgimages"
