@@ -31,4 +31,5 @@
 	<string id="1070">restfulapi plugin options</string>
 	<string id="1071">- listen on ip</string>
 	<string id="1072">- listen on port</string>
+	<string id="1073">Enable plugin: roboTV</string>
 </strings>
