@@ -20,20 +20,21 @@
     <category label="1001">
 		<setting label="1030" type="lsep"/>
 		<setting type="sep" />
+		<setting id="ENABLE_DUMMYDEVICE" type="bool" label="1047" default="false" />
+		<setting id="ENABLE_EEPG" type="bool" label="1046" default="false" />
+		<setting id="ENABLE_EPGFIXER" type="bool" label="1049" default="false" />
+		<setting id="ENABLE_EPGSEARCH" type="bool" label="1044" default="false" />
 		<setting id="ENABLE_IPTV" type="bool" label="1031" default="false" />
 		<setting id="IPTV_NUM_DEVICES" type="slider" option="int" range="1,4" label="1058" visible="!eq(-1,false)" default="1" />
-		<setting id="ENABLE_STREAMDEV_CLIENT" type="bool" label="1032" default="false" />
-		<setting id="ENABLE_STREAMDEV_SERVER" type="bool" label="1033" default="false" />
 		<setting id="ENABLE_LIVE" type="bool" label="1038" default="false" />
 		<setting id="LIVE_IP" type="ipaddress" label="1039" values="" visible="!eq(-1,false)" default="0.0.0.0"/>
 		<setting id="LIVE_PORT" type="number" label="1040" values="" visible="!eq(-2,false)"  default="8008"/>
-		<setting id="ENABLE_EEPG" type="bool" label="1046" default="false" />
-		<setting id="ENABLE_EPGSEARCH" type="bool" label="1044" default="false" />
-		<setting id="ENABLE_XMLTV2VDR" type="bool" label="1045" default="false" />
-		<setting id="ENABLE_DUMMYDEVICE" type="bool" label="1047" default="false" />
+		<setting id="ENABLE_ROBOTV" type="bool" label="1073" default="false" />
 		<setting id="ENABLE_SATIP" type="bool" label="1048" default="false" />
 		<setting id="SATIP_NUM_DEVICES" type="slider" option="int" range="1,10" label="1058" visible="!eq(-1,false)" default="1" />
-		<setting id="ENABLE_EPGFIXER" type="bool" label="1049" default="false" />
+		<setting id="ENABLE_STREAMDEV_CLIENT" type="bool" label="1032" default="false" />
+		<setting id="ENABLE_STREAMDEV_SERVER" type="bool" label="1033" default="false" />
+		<setting id="ENABLE_XMLTV2VDR" type="bool" label="1045" default="false" />
 		<setting type="sep" />
 		<setting id="ENABLE_SOFTCAM" type="bool" label="1036" default="true" />
 		<setting type="lsep" label="1070" />
