@@ -1,4 +1,5 @@
 107
+- add robotv plugin
 - update VDR to 2.3.8
 - update all addons
 
